# gRUSTpcWEB

./: Cargo.toml  Dockerfile  README.md  build.rs  envoy.yaml  read
proto/: greeter.proto  greeter_grpc_web_pb.js  greeter_pb.js  package-lock.json
src/: client.rs  server.rs
vue/: package-lock.json
vue/vue-project/src/: App.vue
vue/vue-project/src/components/: RustgRPC.vue
